fix(style): #1580 formatted the repository component and fixed layout issue

--- a/web/src/app/projects/repository/repository.component.scss
+++ b/web/src/app/projects/repository/repository.component.scss
@@ -157,7 +157,6 @@
           position: absolute;
           font-size: 9pt;
           right: -5px;
-          bottom: -5px;
         }
       }
     }
